@@ -1,3 +1,4 @@
+- #124 Add Python EOL action
 - #123 Convert all countries into modules
 
 2025.3.0
